--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,32 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>Decod'd | Simple & Secure Base64</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png" />
+    <link rel="manifest" href="./favicon/site.webmanifest" />
+    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5" />
+    <link rel="shortcut icon" href="./favicon/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="msapplication-config" content="./favicon/browserconfig.xml" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+    <meta
+      name="description"
+      content="Decod'r makes decoding base64 encoded strings simple and securely. Encode and decode from plain text to base64 with ease."
+    />
+    <!-- Meta Share -->
+    <meta property="og:title" content="Decod'r | Simple & Secure Base64" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="Decod'r makes decoding base64 encoded strings simple and securely. Encode and decode from plain text to base64 with ease."
+    />
+    <meta property="og:image" content="./favicon/android-chrome-512x512.png" />
+
+    <title>Decod'r | Simple & Secure Base64</title>
   </head>
   <body>
     <noscript>
