--- a/public/index.html
+++ b/public/index.html
@@ -49,5 +49,9 @@
 
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
+
+    <script>
+      firebase.analytics();
+    </script>
   </body>
 </html>
