Buy me a Coffee

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+      data-name="BMC-Widget"
+      src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+      data-id="matthewmullin"
+      data-description="Support me on Buy me a coffee!"
+      data-message="Thank you for visiting. You can now buy me a coffee!"
+      data-color="#FF813F"
+      data-position=""
+      data-x_margin="18"
+      data-y_margin="18"
+    ></script>
+
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
@@ -18,14 +30,14 @@
 
     <meta
       name="description"
-      content="Decod'r makes decoding base64 encoded strings simple and securely. Encode and decode from plain text to base64 with ease."
+      content="Decod'r makes decoding base64 encoded strings simple and secure. Encode and decode from plain text to base64 with ease."
     />
     <!-- Meta Share -->
     <meta property="og:title" content="Decod'r | Simple & Secure Base64" />
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="Decod'r makes decoding base64 encoded strings simple and securely. Encode and decode from plain text to base64 with ease."
+      content="Decod'r makes decoding base64 encoded strings simple and secure. Encode and decode from plain text to base64 with ease."
     />
     <meta property="og:image" content="./favicon/android-chrome-512x512.png" />
 
